--- a/index2.html
+++ b/index2.html
@@ -197,8 +197,87 @@ its truly beautiful isn't it... when <b>he</b> said .....
                                      🙄 now im going to sleep <br>
                                      forgive me if i did anywrong<br><br>
 
-<!--- end of pass--->  
+                                     <hr>
+                                     <br>
 
+                                     27-sep-2023 : !0:18PM<br>
+                                     😩 today another bad day for me, the sir registered for the compitition. he asked for the report to submit.<br>
+                                     i asked what report 🙄<br>
+                                     he said, he gave it to one of sister in my class and said her to send it to me. <br>
+                                     that time sir come to know in whatsapp i blocked all of my classmates in day 2<br>
+                                     👉👈<br>
+                                     a little messed up in things again <br>
+                                     sorry today in lab i talked to two sisters from my class one that sir said me to send a report and other sister from my class<br>
+                                     and few from other classes also. im the one who introduced this competetion topic in college the i got up to be the organisor for it in college
+                                      till today there is a person vijay my benchmate one who use to do all by my commands but when come to this level he can't even able to do as i said due to his lack of knowledge 
+                                       and sir also found im the one who behind this , then the teacher made me roam few section to announce details about this in clear to them to help other participant in easy to understand process <br>
+                                       i forgot mask at home in everysection i went all the people staring at me my legs shaked my mind gone mad but still they made claps after my speech🤔<br>
+                                       most said im so good at communication but i did an statue act their<br>
+                                       in after about 8 teams participated , and team rules <br>
+                                       each team should contain 6 member and minimum 2 female mandatory according to government to support girl education<br>
+                                       but few teams are full of girls<br>
+                                       in my team 2 sisters are there <br>
+                                       1- priya<br>
+                                       2- Anusha<br>
+                                       <div class="mypap2"><a href="https://drive.google.com/file/d/1zQnZxJehzVtLCVUrJ_05pxYMuTkNLBkA/view?usp=sharing"><span   >Project SIH</span></a> </div>   <br>
+                                       this is entirely my project and i also leading another 3 teams <br>
+                                       sir made me sit in between team of girls from other section and said me to explain them their project and rest they to know<br>
+                                       my hand and legs started shaking and my face started sweating even when AC in 17 degrees <br>
+                                       i guess today some of my bad luck playing disco on my head<br>
+                                       then after 45 min i did explination a little well to all that sisters in that team <br>
+                                       here real trouble they took me senior teams to me 🥶🥶🥶 <br>
+                                       i thought some one wrote my name in a death note, i lost my mind so well...<br>
+                                       then i remeber what you said, about communication. i went to wash room and started staring my self in mirror just like in below<br><br>
+
+                                       <b><a href ="https://youtu.be/0owqIDe24UU?si=yUMj6UBLw-tW9ykt">click on this to see</a></b><br><br>
+
+                                       then i after i came out with my cold face as ever and explained all teams straignt and clear<br>
+                                       then after i started feel guilty and some unconfortable feeling🙄... <br>
+                                       i said you i will not talk to any girl from college or outside but... i 🙄.<br>
+                                       even now im little embraced 🙄 im here to ask you to forgive me for that... <br>
+                                       please forgive me, im asking forgiveness for my comfort 🙄 else i may go mad for talking to other girls even after saying i'll not talk to<br>
+                                       😔 forgive me <br><br>
+                                       <img src="priya cld.png"/><br>
+                                       this sister is my class mate<br>
+                                       <img src="janucsednr.jpeg"/><br>
+                                       a sister from senior<br>
+                                       <img src="priyacessenior.jpeg"/><br>
+                                       another sister form another class<br>
+                                       <img src="sravanicsednr.jpeg"/><br>
+                                       i thank this sister a lot because she under stood my social anxiety and my introvert type she said, dont worry from now i'll explain the rest of the teams<br>
+                                       in that tammudu == brother in telugu<br><br>
+                                       😑 but this sister also said me yeaterday i looking like a girl with mask because of my eye brows 😑😑😑<br>
+                                       😑😑 again asked do i shaped my eye brows and wearing kajal to eyelids😑😑😑<br><br>
+                                       haa! all that aside dont missunderstood i only put photots here for my comfort only <br>
+                                       else my mind will go mad on thinking im hiding this from my girl, i even made me guilty and more uncomfortable <br>
+                                       now im feeling so free and well cz i said all it to you what what happended in clg <br><br>
+
+                                       forgive me if i did any wrong<br>
+                                       and 👉👈 let me know if you have any doubts<br>
+                                       👉👈 im asking like this and behaving stupid alike...<br>
+                                       you know it right why im like this something like stupid cz of my overthinking🙄<br>
+                                       <br>
+                                        when i shared this with mom she make a weird face and called me a stupid and innocent at same time<br>
+                                        now im for you compliment maa😊😊<br><br>
+
+                                        <hr><br>
+                                        28-sep-2023 : 11:37AM<br><br>
+                                        today is a holiday i guess due to something a government holiday, i guess you also got a holiday <br>
+                                        and my exams are from tuesday 3rd october and tomorrow friday-29th final presentation and submittion <br>
+                                        now its 11:41AM im going to start study for exams and i try to prepare myself for presentation in mirror<br>
+                                        i'll try my best<br>
+                                        and Very good morning lets make it a great day<br><br>
+
+                                        🙄now im too free and exited, cz there is a puzzle for you in my team name <i>MOLB-1</i> try to crack it yourself or i'll tell you then😊 <br>
+                                        forgive me if i did any wrong and dont forget to ask me if you have questions and dont forget to tell me about the movie we'll watch it together<br>
+                                        for now im going to start study so see yaa soon<br>
+                                        A LYSM 😊<br>
+                                        <br>
+
+
+
+<!--- end of pass--->  
+<br><hr><br>
 
 <div class="mypap2"><a href="https://octobunny1.github.io/nift/studytool.html" ><span   >click here to study tool </span></a> </div>   <br>
                  
@@ -336,9 +415,7 @@ its truly beautiful isn't it... when <b>he</b> said .....
     </ul>
 </fieldset>
 
-    <feildset>
-	     <div class="mypap2"><a href="https://drive.google.com/file/d/1zQnZxJehzVtLCVUrJ_05pxYMuTkNLBkA/view?usp=sharing"><span   >Project SIH</span></a> </div>   <br>
-    </feildset>
+    
 </div>
 <!--/respurces-->
 
