--- a/index2.html
+++ b/index2.html
@@ -250,7 +250,9 @@ its truly beautiful isn't it... when <b>he</b> said .....
                                        😑😑 again asked do i shaped my eye brows and wearing kajal to eyelids😑😑😑<br><br>
                                        haa! all that aside dont missunderstood i only put photots here for my comfort only <br>
                                        else my mind will go mad on thinking im hiding this from my girl, i even made me guilty and more uncomfortable <br>
-                                       now im feeling so free and well cz i said all it to you what what happended in clg <br><br>
+                                       now im feeling so free and well cz i said all it to you what what happended in clg <br>
+                                       then or now or even next i dont like/want to hide anything from you🙄 thats why im...
+                                       <br>
 
                                        forgive me if i did any wrong<br>
                                        and 👉👈 let me know if you have any doubts<br>
