--- a/index2.html
+++ b/index2.html
@@ -274,6 +274,81 @@ its truly beautiful isn't it... when <b>he</b> said .....
                                         forgive me if i did any wrong and dont forget to ask me if you have questions and dont forget to tell me about the movie we'll watch it together<br>
                                         for now im going to start study so see yaa soon<br>
                                         A LYSM 😊<br>
+
+                                        <hr>
+                                        now its 28-09-2023 : 10:25PM <br>
+                                        i guided a team from another section also from 25 i guess, two Sister from another section said they like my voice, and they said im kind<br>
+                                         remeber sometimes you used to say im acting like angel and something -_- something... one sister from the two of another section, said she would like to be my friend and she sawn none like me <br>
+                                         and i asked what the point now sister im only here to guide your team <br>she said why you always using word sister when i have a good name, so use it instead why cant we be good friends or maybe best frinds<br><br>
+                                         <b> here i started recorder in phone for safety,  minding previous incident in train back then</b><br>
+                                         i replied as when this competetion come to an end, till then i will do guide team as i said to the mentor, when it end my role will also end so its better for you to hold there.<br>
+                                         she asked  me :  do i have a gF and where she live<br>
+                                         i replied : 'yes i do' and she live a little far from here<br>
+                                         she asked : name and where 'she(you) is from'<br>
+                                         i said :  its none of your business<br>
+                                         she talked a little bad here: like why can't we be just friends only friends, there is nothing wrond <br>
+                                         i said, i better for you to hold your thoughts there if you go far, i dont care about this competetion. i'll quit next minute in reason im not intrested in both of teams<br>
+                                        she again said the same: so no one know and for just friends nothing wrong and dont worry n0-one can say it to her, and there nothing wrong to be friends/best friends isn't it?<br>
+                                        i said her : Sister! its not about the way you think, and she's not the person like you to perform the same way way you presented here, and i dont like to be friend with you, not even you not my team mates or even my class and even who im call sister,... its my responsibility to deliver more than my girl give to me and even more .and in more i love her so much, so i guess you understood so will you please leave... <br>
+                                        That sister called me a Cold after that <br><br>
+                                        i asked :her, sister do you have BF<br>
+                                        she said : yes.and he's in other colleged far away from here<br>
+                                        i asked : if that so, don't you it's wrong  for you, <br>
+                                        she said : i'm feeling loneliness so to avoid feeling im making friends <br>
+                                        i asked : why can't it be from girls .<br>
+                                        she : make a weird face and and said, exactly as i guess you really an innocent and too good. its just a time pass and i dont know what he do there<br>
+                                        i replied : is that no its none of my business, and thanks for waste of time.<br><br>
+                                         - when im about to leave - 
+                                         <br>
+                                         she said : don't you think youre girl be this way, and even she not even living close to your place just like my guy did<br>
+                                         i replied : A while ago i said you, now also saying listen carefully... she's not a girl like you, she is a real women, my women and im her's only. just as i said she do the same way i do,.. and if you wanna air anywords about her, be ready to be the first girl to slap by me. till now i didn't disrepect a girl, may be if you do choose to talk any thing about my women, i will talk to your mother about this incident. you dont need to think when you start suspision to me in this conversation i sarted recording , it may not help my girl cz of the language but your mother may right. so say sorry for saying like that about my person. <br>
+                                         she asked : me to delete and even said sorry also, and also said sorry to me to go that far <br>
+                                         me : i deleted that infront of her. and said better know the meaning and value of trust and loyalty, and i even said sorry also <br>
+                                         she : she called me a B**ch -_- <br>
+                                         i replied : its a waste of time for me . i dont time to argue to you sister, Know your place <br>
+
+                                         <b> and i left the place immediately</b><br><br>
+                                         But you know, 🙄 that person talked so bad in last "Slang...". and no one there when conversation come to end, and she used a little slang words after i deleted <br>
+                                         you know right i dont raise hand or voice over a girl , she took advantage of it in that time <br>
+                                         but last night those words are little like made me discomfort and guilty also for evern after she said in start that way i continued conversation <br>
+                                         it made me feel like im cheating and hiding things from you 🙄 <br>
+                                         when i tried to study this thing constantly running in mind like ' why im hiding this thing from you and i what wrong i did, did i any like that' <br>
+                                         from 4PM my overthinking🙄 raised a little, like it made me feel im stated hiding things if this way, it not a good thing<br>
+                                         i... 🙄... choose a punishment myself to let someone like that ruin my mind and made me hide this from you <br>
+                                         i did 400 push-ups and 35min plank(each 3min) till 9:30PM 👉👈 i also thought like atleast this body pains teach me a lesson before these pains end competition round-1 over college level then exams and i'll mind ny business<br>
+                                         amamma also not at home, i did those by repeating lines like<br>
+                                         <br><hr>
+                                         - im still mentally weak to let someone ruin my mind<br>
+                                         - to be a MEN first i need to be <i>men</i>tally strong<br>
+                                         - to stand my honor of gentle<i>men</i> i need to control my way<br>
+                                         - i will not gonna let anyone go this far talking <br>
+                                         - i will not let anyone ruin my mind<br>
+                                         - i will not something that disrespect my girls trust<br>
+                                         <hr> 
+                                         👉👈 now im feeling finally free not all, still a little bother me like my overthinking🙄 did i missed any to say how she(you) gonna receive this <br>
+                                         please do forgive me if i do any wrong and let me know what wrong i did, i swar i'll not repeat it again<br>
+                                         now its 11:25PM my data got over when i turn on laptop it auto updated so today i'll sleeo after 12:AM after putting this in that code <br>
+                                         you know what, its been 14 minutes still 🙄 im thinking how you may receive this, 👉👈 if you feel like i did any wrong please dont hide <br>
+                                         and 🙄 if you wanna use slang or raise voice on me do it please 👉👈 ... <br>
+                                         i maybe talking a little stupid now, may be or may not be... but one thing im sure at, as said all the time i tried my best to not to talk to others girls but the situation... <br>
+                                         did you remeber, i guess its in between may, when i went to college for certificates there a girl from my previous class come and offer me a bad thing i reject , that night in our conversation i promised you after i made you feel not well with that, i promised you "i'll not let anyother girl get my attention" i'll not let anyone disrepect you, i'll stay loyal to you, i'll never let any girl come close to me<br>
+                                         and asked why im saying that all, <br>
+                                         i said its my responsibility ,.. and promised the same to me <br>
+                                         👉👈 that thing from that day i clear to you what i am, and today i feel a loosing my mind, <br>
+                                         and i always used to say, lying to you is like to myself, and hiding something from you is like cheating me on myself, and on your trust... <br>
+                                         i hope you understood.... <br>
+                                         im a little shy now 👉👈, i dont know why im going shy and a little blushing remeber our things 🙄 👉👈 a few tears...<br><hr>
+                                         did i done any wrong?<br>
+                                         tell me a way to correct my mistakes, <br>
+                                         if i deserve punishment for this, give me one👉👈<br>
+                                         whatever questions or doubts you have please dont hide, ask me 👉👈<br>
+                                         i promise, i'll never talk to that girl again or even dont let her talk to me after this compitetion(tomorrow it going to end at presentation) end. results on october 15<br>
+                                         🙄over even tell me if i did any stupid...<br>
+                                         for now im going to sleep its 12:01AM<br><br>
+                                         Good night👉👈<br>
+
+
+
                                         <br>
 
 
