--- a/index2.html
+++ b/index2.html
@@ -348,9 +348,23 @@ its truly beautiful isn't it... when <b>he</b> said .....
                                          Good night👉👈<br>
 
 
-
+<br>
                                         <br>
-
+<hr>
+29-sep-2023 : 9:33PM <br>
+heyyy hello 👉👈 i guess i left so much similar to a book here for you to read.<br>
+to day the competetion half done and tomorrow morning remaining and after noon results<br>
+i said you know what happened all... today the sister from senior class asked me whats the problem and i said her a little then she dealed her<br>
+and finally the competetion arc come to end<br><br>
+but im again got i'll feaver due to climate <br>
+😅but you know im kinda start to like this body pains these are something feel good and pain at the same time😅<br>
+i guess today i will go to sleep after 10PM, <br>
+hope youre doing well. and how you did in your exams, from tuesday oct onwards i have exams till 7october. im going to prepare well from tomorrow for it 😊<br>
+oiiii Aiesteru 😊<br>
+LYSM <br>
+Always<br>
+good night now its 9:56 im going to sleep, dont rush dont risk okay.. always be safe and strong😊<br>
+good night 😊<br><br>
 
 
 <!--- end of pass--->  
