--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Student Material </h1>
     </header>   
     <div class="container">
-       
+   <p>little error in little it will gonna rectify in this new</p>     
+       <hr>
         <a class="resource-button" href="https://drive.google.com/file/d/1VJ-ApclP7sogDU4d5BODmcJYnDZyWnU4/view?usp=sharing" ><span >downloadProject work</span></a> 
         <a class="resource-button" href="https://docs.google.com/document/d/1Z_A6FwDXWmaf_6O3yZTZW0M5pn4B8J95T0dZioZHFMA/edit?usp=sharing" ><span>Project work</span></a>
         <br><hr>
