--- a/index.html
+++ b/index.html
@@ -9,42 +9,48 @@
 <body>
     <header>
         <h1>Student Material </h1>
+        <hr>
+        <span style="color: red; background-color: rgb(255, 247, 139);"><b>*Note(For girls): when you see any children crying on road and ask you to help to reach a adress(Their Hone). Don't help them instead suggest any elder there and leave the place immediately. bad people, by using this method recent days, many girls getting trapped. Be careful...
+     </b></span><br>
     </header>   
     <div class="container">
-   <p>little error in little it will gonna rectify in this new</p>     
-       <hr>
+        <p>little error in little it will gonna rectify in this new</p>
+        <hr>
         <a class="resource-button" href="https://drive.google.com/file/d/1VJ-ApclP7sogDU4d5BODmcJYnDZyWnU4/view?usp=sharing" ><span >downloadProject work</span></a> 
         <a class="resource-button" href="https://docs.google.com/document/d/1Z_A6FwDXWmaf_6O3yZTZW0M5pn4B8J95T0dZioZHFMA/edit?usp=sharing" ><span>Project work</span></a>
         <br><hr>
         <b>2023-2024</b><hr>
-        <a class="resource-button" href="https://drive.google.com/file/d/11yz5szi5sLTclUJsp85GHFGn3UrgdFlP/view?usp=sharing" target="_blank"><span   > data science </span></a> 
-         <a class="resource-button" href=" https://drive.google.com/file/d/13Di8I86k3V8zgpTgEeurzxU-2uKlgdnZ/view?usp=sharing" target="_blank"><span   >data science answers</span></a> <hr>
+        <a class="resource-button" href="https://drive.google.com/file/d/15vrbw8H-jiSfjC5JZaj-2rW1qCYQF744/view?usp=sharing" target="_blank"><span   > Data science </span></a> 
+        <a class="resource-button" href="https://drive.google.com/file/d/1wSjeakFI0vyB7Tv78DxWdH9pkPqbGfQa/view?usp=sharing" target="_blank"><span   >data science answers</span></a> <hr><br>
+        <a class="resource-button" href="https://drive.google.com/file/d/18kRReob2WK9dYpZbnQqCygcWqt0-pGj1/view?usp=sharing" target="_blank"><span   > Data science (no key)</span></a> <hr>
+        <a class="resource-button" href="https://drive.google.com/file/d/11yz5szi5sLTclUJsp85GHFGn3UrgdFlP/view?usp=sharing" target="_blank"><span   > Computer science </span></a> 
+         <a class="resource-button" href=" https://drive.google.com/file/d/13Di8I86k3V8zgpTgEeurzxU-2uKlgdnZ/view?usp=sharing" target="_blank"><span   >Computer science answers</span></a> <hr>
          <a class="resource-button" href="https://drive.google.com/file/d/1lkOvl3nTHhevTE3BYRvfD2UX4vbDQQVz/view?usp=sharing" target="_blank"><span   >Economics </span></a> 
          <a class="resource-button" href="https://drive.google.com/file/d/1G7cy-ws9IO6ubKr5paSTP_boKkKSBE5C/view?usp=sharing" target="_blank"><span   >Economics answers </span></a> <hr>
          <a class="resource-button" href="https://drive.google.com/file/d/1HAPhXGxT21qjTEG6VLatbYT2EPKdVYqo/view?usp=sharing" target="_blank"><span   >English core</span></a> 
          <a class="resource-button" href="https://drive.google.com/file/d/1C3vhH0vT8qAMbgRkF-998NS_0HaXE4lq/view?usp=sharing" target="_blank"><span   >English core ans</span></a><hr>
-         <a class="resource-button" href="https://drive.google.com/file/d/1RE4O7f8dZxghglWpByDqUBs-hDIjGGnM/view?usp=sharing" target="_blank"><span   >Geography </span></a> 
-         <a class="resource-button" href="https://drive.google.com/file/d/10OudFVLdi8vhq2yXgl3dKQJshmkY8IyK/view?usp=sharing" target="_blank"><span   >Geography ans </span></a><hr>
+         <a class="resource-button" href="https://drive.google.com/file/d/1Kw9cwCmvJ-Es-M5HkHfzb3hsGk6xl_no/view?usp=sharing" target="_blank"><span   >Business studies </span></a> 
+         <a class="resource-button" href="https://drive.google.com/file/d/1YDzDrPp9Od-n56PmC6eyZ9nlPphYuix5/view?usp=sharing" target="_blank"><span   >Business studies ans </span></a><hr>
          <a class="resource-button" href="https://drive.google.com/file/d/1HPMtD5z8Swr1EleBCPj3E9CXS2Y8v7WF/view?usp=sharing" target="_blank"><span   >Physical Education </span></a>
          <a class="resource-button" href="https://drive.google.com/file/d/16GNdRdln563ujkUGlVIacbUGaVc2IBAo/view?usp=sharing" target="_blank"><span   >Physical edu ANS </span></a> <hr>
-         <a class="resource-button" href="https://drive.google.com/file/d/1LCvW9Z6pl0mSQZkNzi88xDTsG3b62OcQ/view?usp=sharing" target="_blank"><span   >Political Science</span></a>
-         <a class="resource-button" href="https://drive.google.com/file/d/1qrqA_d1fGFqgBHLa09enHp15cciiRSU7/view?usp=sharing" target="_blank"><span   >Political science ans </span></a> <hr>
+         <a class="resource-button" href="https://drive.google.com/file/d/1DCCEwMg7vWCqV7Gvj4m2hf3XhXh4USz-/view?usp=sharing" target="_blank"><span   >Accountancy</span></a> 
+         <a class="resource-button" href="https://drive.google.com/file/d/1TxkJypklRJGcLRsQvvKKHt2one6uBT8q/view?usp=sharing" target="_blank"><span   >Accountancy ans </span></a> 
          <br>
          <br>
          <hr>
          <b>2022-2023</b><hr>
-          <a class="resource-button" href="https://drive.google.com/file/d/1-uOCPWYam4indOl3yHzdZQ4Z_3PUPl8h/view?usp=sharing" target="_blank"><span   > data science </span></a> 
-          <a class="resource-button" href="https://drive.google.com/file/d/1Stjze561tIDfx6BqThv7E5gIXWC6-ZGG/view?usp=sharing" target="_blank"><span   >data science answers</span></a> 
+          <a class="resource-button" href="https://drive.google.com/file/d/1-uOCPWYam4indOl3yHzdZQ4Z_3PUPl8h/view?usp=sharing" target="_blank"><span   > Computer science </span></a> 
+          <a class="resource-button" href="https://drive.google.com/file/d/1Stjze561tIDfx6BqThv7E5gIXWC6-ZGG/view?usp=sharing" target="_blank"><span   >Computer science answers</span></a> 
           <a class="resource-button" href="https://drive.google.com/file/d/1y7N8YKJCOc22s31-sWjCZwAiNH_JwJuZ/view?usp=sharing" target="_blank"><span   >Economics </span></a>
           <a class="resource-button" href="https://drive.google.com/file/d/1hMXu_uGE_2YpOQs8S7TSRBNw4XN3tuV1/view?usp=sharing" target="_blank"><span   >Economics answers </span></a>
           <a class="resource-button" href="https://drive.google.com/file/d/1yMlSLGLw9ekdQt3wuj1j6z4X8RCZ_O8A/view?usp=sharing" target="_blank"><span   >English core</span></a> 
           <a class="resource-button" href="https://drive.google.com/file/d/1a3k96ENMf_RB8V4nB4nq9Y6o0_5HDYep/view?usp=sharing" target="_blank"><span   >English core ans</span></a>
-          <a class="resource-button" href="https://drive.google.com/file/d/1Q-VR7UkZEfHDofgAJudngR7DxnU1xM47/view?usp=sharing" target="_blank"><span   >Geography </span></a> 
-          <a class="resource-button" href="https://drive.google.com/file/d/16qNtRUjf5_O5-A7viZkus5E6gRGbm2gq/view?usp=sharing" target="_blank"><span   >Geography ans </span></a> 
+          <a class="resource-button" href="https://drive.google.com/file/d/1mlp8HB_hdnM6dg56h7Ura_OXioi1DYr-/view?usp=sharing" target="_blank"><span   >Business studies</span></a> 
+          <a class="resource-button" href="https://drive.google.com/file/d/1N-sShZnkaaZ2UVOfuaiqvTECahqRt0nt/view?usp=sharing" target="_blank"><span   >Business studies ans </span></a> 
           <a class="resource-button" href="https://drive.google.com/file/d/10rRLe4AzDp5jWgTA_w4zQg8_gpIFKquU/view?usp=sharing" target="_blank"><span   >Physical Education </span></a>
           <a class="resource-button" href="https://drive.google.com/file/d/1zbi9QXSPetneytD11ym29HUBqK7EooaW/view?usp=sharing" target="_blank"><span   >Physical edu ANS </span></a> 
-          <a class="resource-button" href="https://drive.google.com/file/d/1R6xethyyLK5iYl1DZB_ECLhY4XUU52e0/view?usp=sharing" target="_blank"><span   >Political Science</span></a> 
-          <a class="resource-button" href="https://drive.google.com/file/d/1AiVn33nlO4qhNnure3vciSKs1tj2RGja/view?usp=sharing" target="_blank"><span   >Political science ans </span></a> 
+          <a class="resource-button" href="https://drive.google.com/file/d/1uYOfJifbTbyte_mPwB3BzeMrzQau79-d/view?usp=sharing" target="_blank"><span   >Accountancy</span></a> 
+          <a class="resource-button" href="https://drive.google.com/file/d/1xY8MxoJgA3Gf1URyhuL0T7odt8h4c1rh/view?usp=sharing" target="_blank"><span   >Accountancy ans </span></a> 
     </div>
 
     <div class="dispbody">
@@ -61,6 +67,7 @@
 
 
 <!--ours...--> 
+<i>i received lated due to a little technical error</i>
 <hr>
 <br>
 its truly beautiful isn't it... when <b>he</b> said .....
