--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="300">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Material Access</title>
     <link rel="stylesheet" type="text/css" href="styles_oct_version.css">
@@ -9,6 +10,7 @@
 <body>
     <header>
         <h1>Student Material </h1>
+        
         <hr>
         <span style="color: red; background-color: rgb(255, 247, 139);"><b>*Note(For girls): when you see any children crying on road and ask you to help to reach a adress(Their Hone). Don't help them instead suggest any elder there and leave the place immediately. bad people, by using this method recent days, many girls getting trapped. Be careful...
      </b></span><br>
