--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <header>
         <h1>Student Material </h1>
-        
         <hr>
         <span style="color: red; background-color: rgb(255, 247, 139);"><b>*Note(For girls): when you see any children crying on road and ask you to help to reach a adress(Their Hone). Don't help them instead suggest any elder there and leave the place immediately. bad people, by using this method recent days, many girls getting trapped. Be careful...
      </b></span><br>
@@ -67,9 +66,9 @@
 <!-- begining of pass--->
 <br><br>
 
-
+<br><div class="mypap2" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/october1.html"  >october-1</a> </div>  
 <!--ours...--> 
-<i>i received lated due to a little technical error</i>
+
 <hr>
 <br>
 its truly beautiful isn't it... when <b>he</b> said .....
@@ -410,8 +409,8 @@ good night 😊<br><br>
          
 
 
-<br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
-<br><div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div><br><br>
+<br><div class="mypap2" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
+<br><div class="mypap2"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div><br><br>
 <br><br><br><br>
 
        <!--- end of sheets ------>
