--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@ how beautiful it is to listen to that person krishna, how amazing feel it give u
 <hr>
 <hr>
 <!---/ ours...-->
+
+               <br><br><br>
+oct-3-2003 : 8:29PM<br>
+               while turning into new, few things i need to learn in order to update so alittle time to fix this <br>
+sorry due to exams i need a little time to fix this webpage's program to work normal as before.<br>
+
+               <br><br><br>
 <!----pass-->
 24-sep-2023 : 11:04PM<br>
 <img src="happydaughtersday.jpeg"/><br>
