--- a/index.html
+++ b/index.html
@@ -231,7 +231,11 @@ and don't how a person can think of hurting mother and peroson mother like to th
                      and more excitedly waiting to bite and aswer you <br>
                      bites😋<br>
                      bites😋<br>
-
+                     for me let me know what can i do to clear all my potato doubts.<br>
+<hr><br><br>
+<i>Let me know if you got all the pages properly and in sequence or not !</i><br>
+yes i received all from your borrowed book and now im gonna visit the link you provide there to earn by skill,
+that really a great valuable information for me<br><br><hr>
 
 
 <hr>
