--- a/index.html
+++ b/index.html
@@ -250,6 +250,26 @@ always love you my Hinata💝<br>
 good night<br>
 
 
+<hr><br>
+
+11/10/2023 8:40PM <br>
+im home, today train a little late and i forgot to say you this<br>
+now im going from father home so i need to travel 12km to reach railway station. im going and coming on bike. and i even wearing helmet and mainly im driving slow and carefully<br>
+now im going to freshup and all, and you know due to project and competetion my class works went pending and today one subject result given i got 92% in that 😄<br>
+and i opened laptop direct after home cz i want to share this with you 😄<br>
+you know that im lateral entry joined in 2nd year right while im the only lateral entry in my class, today vice principal sir visited my class and after he serve a little speech <br>
+he started praising me and its not a matter for me to care, that sir put all his ego aside to come to talk to me and said few of other class leaders to take any decision after discusing it to me<br>
+first i got panic a little then he started saying all the class and my class teacher about how im doing and about my skill<br>
+😑 but im too shy at same time its so embrassing<br>
+<br>
+😅 its good at same time i won against his ego<br>
+oii how you are doing, are you fine? are you doing meditation? are you sleeping well<br>
+and im fine my fever also gone im now strong as before<br>
+😄<br>
+i guess now i need to freshup food and sleep im too tired, <br>
+so good night my princess<br>
+always love you a lot <br><br>
+
 
 
 
