--- a/index.html
+++ b/index.html
@@ -270,6 +270,43 @@ i guess now i need to freshup food and sleep im too tired, <br>
 so good night my princess<br>
 always love you a lot <br><br>
 
+<hr>
+
+<br><br>
+12-oct-2023 : 9:45PM<br>
+oiii how you are doing konichiva<br>
+🙄 are you still anger on me 👉👈<br>
+sorry for the late i had did<br>
+🙄agaain today i missed train, i catched one at 8PM + then bite then came home around 9PM<br>
+<br>
+
+oiii its been 8 days you didn't yes or no for my question about my team name : what it mean by "MLOB-1"<br>
+MLOB-1 is my team name and im leader of it,now im gonna reveal answer, MLOB-1 means : <br>
+<b>My Only Lady Bug - Only 1</b>
+<br>
+how is it ...?<br><br>
+
+👉👈 you know what, 🙄 i love the way you send me those messages like asking the way ,whether did i loose intrest something like that<br>
+if you still anger on me for late keep it that way😁 <br>
+its something adorable ,im still laughing sometimes after seeing that messages <br>
+🤣 some gf from fan girl 🤣🤣🤣<br>
+while im waiting for next train im alone in the station, i started reading that again i took a pic of it, i started laughing by imaging your face<br>
+did you fell jealous of my fan girls😏<br>
+😅 sorry sorry just kidding<br>
+huh!!!<br>
+i want to make other girls jealous of my women not my stupid jealous of others<br>
+oiii,  you didn't said me to stop talking to anyone, i choose it and the way so its my way to not talk talk or not being friend with them<br>
+rather than being friend with other girls i love to be alone in my way, here im saying alone cz most are crossing limits while boys and girls around me thats why im only chooose to being myself and focus on sucess for our future<br>
+im still want to say the same " whenver or what thing you feel wrong way from mine just let me know it clear i will put myself away from it and change"<br>
+<br>
+one thing i can say heartfully, i can't imagine a life without you, i will not allow myself to cheat, betray or even hurting you i will not let myself go this way. i will always keep myself pure for you<br>  
+👉👈 cz i love you a lot more like i love myself and i don't allow me to lie to myself<br>
+when i started swimming its me and the ocean for my shore, attempt to abond is like going down in ocean to kill myself.<br>
+i will not loose my path toward light in the dark road<br>
+when i start feel like you are my half, from that day i choose to stay pure no matter what, i never let any girl come in my mind other than you. i will always be this way<br>
+but i still love the you asked those question, and don't hesitate to ask when you feel that way. cz you have all rights to ask the information or things you wanna know im always ready to submit myself to my women.<br><br>
+oii hinata ,  👉👈 love you so much good night...<br>
+sleep well.<br><br>                  
 
 
 
