--- a/index.html
+++ b/index.html
@@ -306,8 +306,14 @@ i will not loose my path toward light in the dark road<br>
 when i start feel like you are my half, from that day i choose to stay pure no matter what, i never let any girl come in my mind other than you. i will always be this way<br>
 but i still love the you asked those question, and don't hesitate to ask when you feel that way. cz you have all rights to ask the information or things you wanna know im always ready to submit myself to my women.<br><br>
 oii hinata ,  👉👈 love you so much good night...<br>
-sleep well.<br><br>                  
-
+sleep well.<br><br>     <hr>             
+13-oct-2023 : 1:24AM<br>
+               sorry last 2 days i didn't talked anything till now im doing a project, just now i completed cause tomorow last date for submission.
+now im going to sleep hope you sleeping well.<br>
+               and now im go and eat then going to sleep okay<br>
+               so good night sleep well<br>
+               love you ^-^<br>
+               i'll say about this project tomorrow<br><br>
 
 
 <!--- end of pass--->  
